Use valueOf boxing to avoid error prone warnings.
Change-Id: Ib93ee8159736d9cc10c747f3c4dd54965711a4e0